--- a/package.json
+++ b/package.json
@@ -35,35 +35,35 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.44.4",
-    "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@types/qrcode": "^1.5.5",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
+    "critters": "^0.0.23",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
-    "firebase": "^11.8.1",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-countdown": "^2.3.5",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.2.2",
-    "zod": "^3.24.2",
-    "zustand": "^4.5.4"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.89.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
