--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.89.0",
