Update Netlify configuration for environment variables

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
   command = "npm run build"
+  publish = ".next"
 
 [build.environment]
-  NODE_VERSION = "20"  # Specify Node.js version
-  NEXT_TELEMETRY_DISABLED = "1"  # Disable Next.js telemetry
+  NODE_VERSION = "20"
+  NEXT_TELEMETRY_DISABLED = "1"
 
   # Server-side environment variables (not exposed to client)
   ADMIN_PHONE_NUMBER = "$ADMIN_PHONE_NUMBER"
@@ -19,7 +20,6 @@
 # Required for Next.js on Netlify
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-
 
 # Security headers
 [[headers]]
